--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@typechain/truffle-v5": "^5.0.0",
-    "pbkdf2": "^3.1.2"
+    "pbkdf2": "^3.1.2",
+    "truffle-flattener": "^1.6.0",
+    "truffle-plugin-verify": "^0.5.21"
   }
 }
