--- a/package.json
+++ b/package.json
@@ -1,52 +1,40 @@
 {
-  "name": "excalibur-core",
-  "description": "🎛 Core contracts for the Excalibur AMM protocol",
+  "name": "camelot-ammv2-core",
   "version": "1.0.0",
-  "keywords": [
-    "uniswap",
-    "ethereum",
-    "v2",
-    "core",
-    "uniswap-v2",
-    "excalibur"
-  ],
-  "files": [
-    "contracts",
-    "build"
-  ],
-  "engines": {
-    "node": ">=10"
-  },
   "devDependencies": {
-    "@truffle/hdwallet-provider": "^1.4.3",
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
-    "chai": "^4.2.0",
-    "dotenv": "^10.0.0",
-    "eth-gas-reporter": "^0.2.22",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@nomicfoundation/hardhat-verify": "^2.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^6.1.5",
+    "@types/chai": "4.2.6",
+    "@types/mocha": "5.2.7",
+    "chai": "4.2.0",
+    "dotenv": "^16.0.3",
     "ethereum-waffle": "^2.4.1",
-    "ethereumjs-util": "^6.2.0",
-    "mocha": "^6.2.2",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "solc": "0.5.16",
-    "truffle-typings": "^1.0.8",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "ethereumjs-util": "6.2.0",
+    "ethereumjs-utils": "^5.2.5",
+    "ethers": "5.7.2",
+    "hardhat": "^2.12.6",
+    "hardhat-abi-exporter": "^2.10.1",
+    "hardhat-deploy": "^0.11.22",
+    "hardhat-etherscan": "^1.0.1",
+    "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-verify": "^1.0.0",
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "8.5.4",
+    "typechain": "^8.1.1",
+    "typescript": "4.3"
   },
-  "scripts": {
-    "lint": "yarn prettier ./test/*.ts --check",
-    "lint:fix": "yarn prettier ./test/*.ts --write",
-    "compile": "truffle compile",
-    "pretest": "yarn compile",
-    "test": "mocha",
-    "prepublishOnly": "yarn test"
-  },
-  "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@typechain/truffle-v5": "^5.0.0",
-    "pbkdf2": "^3.1.2",
-    "truffle-flattener": "^1.6.0",
-    "truffle-plugin-verify": "^0.5.21"
+    "@openzeppelin/contracts": "3.4.1-solc-0.7",
+    "@openzeppelin/test-helpers": "^0.5.16"
   }
 }
